--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Java Script</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
-    <h1>Hello</h1>
-    <h2>Hello</h2>
-<script src="script.js"></script>
+  <div>
+
+  <h2 id="">Lets check the number entered is Even or Odd </h2>
+  <input type="number" id="num" name="num">
+  <button id="btn" >Hit me</button>
+  </div>
+  
+  <h1 id="numberCheck"></h1>
+     <script src="script.js"></script>
 </body>
+
 </html>
